# SwasthyaSetu

./: README.md
SwasthyaSetu/: .gitignore  DEV_SETUP.md  Dockerfile.backend  Dockerfile.frontend  docker-compose.yml  medical_summarizer.db  pyproject.toml  run_acceptance_tests.sh  run_dev.sh  run_local.sh  test_backend_simple.py  test_braces_data.py  test_large_json.py  test_swasthyasetu_braces.py  test_ultra_fast.py  test_your_data.py
SwasthyaSetu/backend/: README.md  database.py  main.py  medical_summarizer.db  pyproject.toml  requirements.txt
SwasthyaSetu/data/processed/: processed_data.jsonl
SwasthyaSetu/data/raw/: train(1).json
SwasthyaSetu/docs/: Design_Memo.md  Sources_and_Influences.md
SwasthyaSetu/docs/assets/: image1.txt  image2.txt  image3.txt  image4.txt  image5.txt  image6.txt  image7.txt  image8.txt
SwasthyaSetu/frontend/: index.html  package.json  pnpm-lock.yaml  tailwind.config.js
SwasthyaSetu/frontend/src/: App.css  App.jsx
SwasthyaSetu/frontend/src/components/ui/: alert.jsx  badge.jsx  button.jsx  card.jsx  progress.jsx  separator.jsx  tabs.jsx
SwasthyaSetu/model/: enhanced_perspective_transformer.py  perspective_aware_transformer.py  swasthyasetu_t5.py  transformer.py
SwasthyaSetu/nginx/: frontend.conf
SwasthyaSetu/scripts/: demo_perspective_model.py  export_onnx.py  prepare_data.py  verify_onnx.py
SwasthyaSetu/tests/: test_api.py
SwasthyaSetu/training/: README.md  evaluate.py  pyproject.toml  requirements.txt  train.py  train_perspective_aware.py
SwasthyaSetu/utils/: dataset.py  tokenizer.py
