[project]
name = "swasthyasetu"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gitingest>=0.3.1",
    "sentry-sdk[fastapi]>=2.35.1",
]

[tool.uv.workspace]
members = [
    "backend",
    "training",
]

[dependency-groups]
dev = [
    "accelerate>=1.10.1",
    "bcrypt>=4.3.0",
    "datasets>=4.0.0",
    "fastapi>=0.116.1",
    "numpy>=2.3.2",
    "pydantic>=2.11.7",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "scikit-learn>=1.7.1",
    "sqlalchemy>=2.0.43",
    "tokenizers>=0.22.0",
    "torch>=2.8.0",
    "transformers>=4.56.0",
    "uvicorn>=0.35.0",
]
